# agzamov-test

./: .gitignore  AUDIT_GUIDE.md  DECISIONS.md  LICENSE  PRESS_RELEASE.md  README.md  agzamov-test.md  mvp-task-spec.md  publication-plan.md  vision-implementation.md
agzamov/: .env.example  __init__.py  __main__.py  agent.py  chess_engine.py  cli.py  config.py  memory_bridge.py  orchestrator.py  pyproject.toml  report.py  stats.py  stockfish_analyzer.py  storage.py  tree_search.py
agzamov/config/: default.yaml
agzamov/dashboard/: api.py  server.py
agzamov/dashboard/static/: app.js  index.html  setup.js  style.css
agzamov/tests/: test_agent.py  test_chess_engine.py  test_config.py  test_memory_bridge.py  test_move_parser.py  test_orchestrator.py  test_report.py  test_stats.py  test_storage.py
latex/: agzamov-test.tex  references.bib
results/dash-solo-20260224-125424/chess/: phase_0_games.pgn  phase_0_results.jsonl  reasoning.jsonl
results/dash-solo-20260224-125424/stats/: phase_0_summary.json
scripts/: verify_results.py
